# skill_service

./: .env.example  README.md  main.py  pyproject.toml  skill_service.py
api/: __init__.py  schemas.py
api/routers/: __init__.py  skill.py
scripts/mysql/migrations/: 2026_06_29_skill_add_fallback_for_tools.sql
